In driver tcl enable CCI only for EL1 non-secure state.
Create channel submit variant to program additional BD fields.
Add HasRxLength field in config and channel structure.

xilmbox_v1_0:
Initial Release.
Updated mld supported peripheral option with A72 and PMC.

zdma_v1_7:
Add support for versal IP name.
Update writeonly mode example to support versal IP.
Fix alignment pragmas for IAR compiler.

cpu_cortexr5_v1_5:
Create a new version of cortex r5 CPU driver to add support for hard
float.

coresightps_dcc_v1_5:
Fixed MISRA C Mandatory Violations CR#1025101.

xilmfs_v2_3:
Deprecate the XilMFS Library

usbps_v2_4:
Fix incorrect dma_alignment pragma directive for IAR workbench

zynqmp_fsbl:
Added dual parallel configuration support and QPI support for 24bit qspi boot
mode for Macronix flash parts
AES engine and SHA engine are reset during FSBL initialization
Zeroize PL upon error in decryption
Remove sha2 support from FSBL
Always select EEPROM lower page for reading SPD data
Dynamic DDR configuration is strictly based upon the design for all boards
including ZCU102 and ZCU106
Added support for armclang compiler
Removed disabling of the WDT error before exiting FSBL to avoid overwriting of
the PMU settings
Updated PMU with FSBL running status using bits 1 and 2 from PMU global
general purpose register 5
DDR end address is not fixed at 2GB but derived from Vivado
Using XilPM XPm_SetConfiguration API instead of using direct IPI calls for
communicating with PMUFW.

xilpm_v2_4:
Add checksum support for IPI data
Misra C fixes in XilPm
Support for IAR compier
Deprecated PM_SECURE_RSA_AES

zynqmp_pmufw:
Store and restore LPD SLCR_SECURE registers during POS.
Idle nodes only once even if they are assigned to multiple masters.
Add support to idle and reset all twelve TTCs.
Misra C fixes in PMU Firmware.
Set LPD WDT error action after FSBL completion as FSBL disables before
exiting.
Store FSBL to reserved DDR and restore before performing APU-only restart.